--- a/style.css
+++ b/style.css
@@ -70,4 +70,29 @@ pre p{
     margin-top:-30px;
     font-weight: bold;
 }
+.saiba-mais{
+    background-color:rgb(62, 62, 62);
+    margin-top:30px;
+    margin-left:-20px;
+    margin-right:-20px;
+    margin-bottom: 10px;
+    
+}
+.saiba-mais p{
+    color: var(--cor04);
+    font-family: var(--fonte-informativa);
+    padding: 15px;
+    text-align: center;
+    font-size: 1.3em;
+    font-weight: 200;
+}
+.saiba-mais p > a{
+    color: var(--cor04);
+}
+.saiba-mais img{
+    display: block;
+    margin: auto;
+    padding-top:10px;
+    padding-bottom:30px;
+}
  /* ---------------------------------Rodapé---------------------------------- */
